<resources>
    <string name="app_name">MiProyecto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tituloMenu">Diarios y noticias de España</string>
    <string name="correoUsuario">correo@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Diarios de España</string>
    <string name="menu_gallery">Noticias en vivo</string>
    <string name="menu_deportivas">Noticias deportivas en vivo</string>
    <string name="menu_economia">Noticias de economía en vivo</string>
    <string name="menu_tecnologia">Noticias tecnológicas en vivo</string>
    <string name="noticiasdirecto">Noticias en directo</string>
    <string name="otras">Otras opciones</string>
    <string name="menu_slideshow">Configuración</string>
    <string name="menu_acerca">Sobre nosotros</string>
    <string name="texto_pantalla_principal">Diarios y noticias de España</string>
    <string name="diarios">Diarios de España</string>
    <string name="noticias_generales">Noticias generales</string>
    <string name="noticias_deportivas">Noticias deportivas</string>
    <string name="noticias_economia">Noticias economía</string>
    <string name="noticias_tecnologia">Noticias tecnología</string>
    <string name="noticias_internacionales">Noticias internacionales</string>
    <string name="noticias">Noticias de España</string>
    <string name="configuracion">Configuración</string>
    <string name="acerca">Acerca de</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="welcome_news_title">Novedades</string>
    <string name="welcome_news_next">Siguiente</string>
    <string name="generales"><h1>Generales</h1></string>
    <string name="regionales"><h1>Regionales</h1></string>
    <string name="economia"><h1>Economía y política</h1></string>
    <string name="deportes"><h1>Deportes</h1></string>
    <string name="tecnologia"><h1>Tecnología</h1></string>
    <string name="celebridades"><h1>Celebridades</h1></string>
    <string name="moda"><h1>Moda</h1></string>
    <string name="title_activity_detalles">Detalles</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="titulo">Titulo de noticia</string>
    <string name="fecha">07/10/2020</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nada">nada</string>
    <string name="clausula1">
        \t<b><u>CLÁUSULA 1 : Condiciones de uso.</u></b>\n\n
        Las presentes condiciones de uso ( en adelante, "Condiciones de uso") regulan el acceso y la utilización de la aplicación "Noticias y diarios de España", propiedad única y exclusivamente de JOBEANDA STUDIOS S.L, así como  los contenidos y servicios que el títular pone a disposición de los usuarios, (en adelante "Usuarios").\n
        Asimismo, las presentes condiciones de uso establecen los términos y condiciones por los que se rige el funcionamiento y utilización de Noticias y diarios de España.\n
    </string>
    <string name="clausula2">
        \t<b><u>CLÁUSULA 2 : Aceptación.</u></b>\n\n
        El acceso a Noticias y diarios de España o su uso por el Usuario implica necesariamente, y sin reservas, el conocimiento y aceptación de las presentes Términos y Condiciones, por tanto, se recomienda que el Usuario las lea detenidamente.\n
        La indicación de aceptación del corriente, implica la lectura y comprensión de los Términos y Condiciones que hacen al corriente.
    </string>
    <string name="clausula3">
        \t<b><u>CLÁUSULA 3 : Propiedad intelectual.</u></b>\n\n
        Jobeanda Studio S.A., resulta ser la única y exclusiva propietaria del diseño, implementación y contenido que le es propio de la interfaz y su funcionamiento, incluyendo su diseño gráfico y el código fuente, de Diarios y noticias de España; los cuales están protegidos por derechos de autor y demás derechos previstos en los diversos ordenamientos jurídicos del mundo, y, en particular, en el Convenio de París para la Protección de la Propiedad Industrial del 20 de marzo de 1883, revisado en Bruselas el 14 de diciembre de 1900 en Washington el 2 de junio de 1911, en La Haya el 6 de noviembre de 1925, en Londres el 2 de junio de 1934 y en Lisboa el 31 de octubre de 1958 (Acta de Lisboa), y concordantes, y propios de cada región o país en el que la presente sea utilizada.\n
        Estos derechos pertenecen exclusivamente a Jobeanda Studio S.A. o a sus licenciantes, por lo tanto, queda expresamente prohibido cualquier acto de reproducción, distribución, transformación o comunicación pública, así como cualquier tipo de cesión, del todo o parte del contenido de Diarios y noticias de España, las herramientas por éste incluidas, sus secciones o cualquier otro contenido estético o informático existente en este, y en general cualquier acto de explotación de la totalidad o parte de los contenidos (imágenes, textos, diseño, índices, formas, etc.) así como de las bases de datos y del software necesario para la visualización o el funcionamiento de los mismos y de cualquier objeto que según la legislación vigente sea protegible por las normas de propiedad intelectual.\n
        Los Usuarios no podrán en ningún caso explotar o servirse comercialmente, de forma directa o indirecta, total o parcial, de ninguno de los contenidos. La autorización para el uso de cualquier contenido del sitio web puede solicitarse a la dirección de correo electrónico socrates.descartes.1980@gmail.com. Lo establecido en los párrafos anteriores no supondrá en ningún caso la asunción de responsabilidad por parte de Jobeanda Studio S.A. sobre el contenido, ni podrá generar derecho a indemnización para Usuarios o terceros.\n
        No podrán utilizarse las marcas, nombres comerciales, rótulos de establecimientos, denominaciones, logotipos, eslóganes o cualquier tipo de signo distintivo mostrado en Diarios y noticias de España.\n
        Jobeanda Studio S.A. se reserva expresamente cuantas acciones civiles y penales, en virtud de la legislación nacional y extranjera pudieran corresponderle como consecuencia de la vulneración de los derechos de propiedad industrial e intelectual que le corresponden.\n
        No obstante, Jobeanda Studio S.A. declara que la edición, redacción, contenido, opiniones, análisis, como todo otro elemento exhibido en los medios de comunicación a los cuales puede accederse a través de Diarios y noticias de España no son de su propiedad intelectual, la cual corresponden únicamente a las empresas o personas titulares de los respectivos derechos involucrados.\n
        Así también, Jobeanda Studio S.A. manifiesta que los isologotipos presentes en Noticias y diarios de España no corresponden a su autoría, ni a su propiedad intelectual. Su exhibición es realizada al mero efecto estético e identificatorio, sin que ello implique o devengue beneficio económico o uso concreto y propio del ejercicio de la propiedad intelectual que sobre los mismos se ciñe.
        </string>
    <string name="clausula4">
        \t<b><u>CLÁUSULA 4 : Ajenidad del contenido y de la eventual responsabilidad involucrada.</u></b>\n\n
        Jobeanda Studio S.A. no se responsabiliza, de ninguna manera, del contenido gráfico o escrito presente en los medios de comunicación exhibidos, en tanto que la autoría de los mismos, conforme lo indicado al apartado precedente, le es absolutamente ajena.\n
        La totalidad de las tapas y contenidos digitales de los medios de comunicación que puede ser accedidos por el Usuario, responden a información ya de por sí accesibles de forma libre e independiente por parte del público en general. De esta manera, la exhibición que puede ser obtenida a través de Diarios y noticias de España es dispuesta al mero efecto difusivo y distributivo de la información.
    </string>
    <string name="clausula5">
        \t<b><u>CLÁUSULA 5 : Condiciones de uso. Almacenaje de datos.</u></b>\n\n
        No se requiere la registración o el llenado de formularios previos, por parte de los Usuarios que deseen hacer uso de Diarios y noticias de Esaña.\n
Jobeanda Studio S.A. no recopila de manera propia y directa datos personales, sean sensibles o no, de los Usuarios que pudieran acceder al uso de Diarios y noticias de España; no obstante de los datos que pudieran ser recopilados a través de las funciones autónomas e independientes de la voluntad y control de Jobeanda Studio S.A., y a modo de desarrollo meramente técnico, por parte del sistema Google Analytics®, o aquellos que fueran almacenados por terceros intermePeriódicos Españoles como lo son –sin que tal enumeración implique limitación alguna- App Store®, Google Play®, Facebook®, Twitter®, RSS, entre otros.\n
Jobeanda Studio S.A. no recopila datos personales, sean sensibles o no, de sus usuarios con el propósito de efectuar futuras transferencias de los mismos, sean onerosas o gratuitas.
    </string>
    <string name="clausula6">
        \t<b><u>CLÁUSULA 6 : Limitaciones tecnológicas.</u></b>\n\n
        Ponemos en conocimiento del Usuario que, como consecuencia de la realización de trabajos de mantenimiento, en determinados casos pueden producirse interrupciones temporales en los servicios brindados por Diarios y noticias de España.\n
        Informamos asimismo al Usuario que, además de los indicados anteriormente, existe una gran variedad de factores que pueden afectar Diarios y noticias de España, a las herramientas tecnológicas que operan dentro de la aplicación, y/o a su calidad, tales como, a título enunciativo, pero no limitativo: condiciones ambientales, saturación de redes, conectividad, software de terceros, etc. A través de la siguiente dirección de correo electrónico puede ponerse en contacto con nosotros para trasladarnos errores que detecte, así como comentarios y sugerencias: socrates.descartes.1980@gmail.com.
    </string>
</resources>